добавил корзину добавил ссылки через вью

--- a/ShopСlothes/ShopСlothes/Views/Сar/List.cshtml
+++ b/ShopСlothes/ShopСlothes/Views/Сar/List.cshtml
@@ -1,4 +1,4 @@
-﻿using ShopСlothes.ViewModels
+﻿@using ShopСlothes.ViewModels
 @model CarsListView
 @{
     ViewData["Title"] = "Home Page";
@@ -10,3 +10,4 @@
   foreach (Car item in Model.GetCars)
             Html.Partial("AllCarsHtm", item);
             }
+            </div>
