added shopping cart details shopping cart, fixed bugs

--- a/ShopСlothes/ShopСlothes/Views/Shared/_Layout.cshtml
+++ b/ShopСlothes/ShopСlothes/Views/Shared/_Layout.cshtml
@@ -20,16 +20,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="/">Главная</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Главная</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="/ShopCart/">Корзина</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ShopCart">Корзина</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="/Car/List">Машиныс</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="List">Машиныс</a>
                         </li>
                             <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="/Car/List/electro">Электро</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="/Car/List/electro">Электро</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="/Car/List/fuel">Бензин</a>
