--- a/ShopСlothes/ShopСlothes/Views/Shared/AllCarsHtm.cshtml
+++ b/ShopСlothes/ShopСlothes/Views/Shared/AllCarsHtm.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Home Page";
 }
 <div class="col-lg-4">
-    <h1>Name--></h1>@Model.Name
+    
     <img class="img-thubnail" src="@Model.Img" alt="@Model.Name" />
     <h2>@Model.Name</h2>
     <p>@Model.ShortDesc</p>
     <p>Price-></p>@Model.Price.ToString("c");
-    <p><a class="btn btn-warning" href="#">Подробнее</a></p>
+    <p><a class="btn btn-warning" asp-controller="ShopCart" asp-action="addToCarss" asp-route-id="@Model.Id" erhref="#">Добавить в корзину</a></p>
 </div>
