--- a/ShopСlothes/ShopСlothes/Views/ShopCart/Index.cshtml
+++ b/ShopСlothes/ShopСlothes/Views/ShopCart/Index.cshtml
@@ -9,7 +9,7 @@
 		</div>
 		
 	}
-	<div class="btn btn-danger" asp-controller="Order">Оплатить</div>
+	<a class="btn btn-danger" asp-controller="Order" asp-action="CheckOut">Оплатить</a>
 </div>
 
 
