--- a/ShopСlothes/ShopСlothes/Views/Shared/_Layout.cshtml
+++ b/ShopСlothes/ShopСlothes/Views/Shared/_Layout.cshtml
@@ -26,13 +26,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ShopCart">Корзина</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="List">Машиныс</a>
+                            <a class="nav-link text-dark"  href="/Cars/List">ffffffff</a>@* asp-area="" asp-controller="Car" asp-action="List">Машиныс</a>*@
                         </li>
                             <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="/Car/List/electro">Электро</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Car/List/electro">Электро</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="/Car/List/fuel">Бензин</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Car/List/fuel">Бензин</a>
                         </li>
                     </ul>
                 </div>
