--- a/ShopСlothes/ShopСlothes/Views/Сar/List.cshtml
+++ b/ShopСlothes/ShopСlothes/Views/Сar/List.cshtml
@@ -3,7 +3,8 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-<h3>@Model.cuurCategory</h3>
+f
+<h3>@Model.CuurCategory</h3>
 <div class="row mt-5 mb-2">
     @{
 
