--- a/ShopСlothes/ShopСlothes/Views/Shared/AllCarsHtm.cshtml
+++ b/ShopСlothes/ShopСlothes/Views/Shared/AllCarsHtm.cshtml
@@ -1,13 +1,22 @@
-﻿@model Car
-
+﻿@model HomeViewMode
+@using ShopСlothes.ViewModels
 @{
     ViewData["Title"] = "Home Page";
 }
 <div class="col-lg-4">
-    
-    <img class="img-thubnail" src="@Model.Img" alt="@Model.Name" />
-    <h2>@Model.Name</h2>
-    <p>@Model.ShortDesc</p>
-    <p>Price-></p>@Model.Price.ToString("c");
-    <p><a class="btn btn-warning" asp-controller="ShopCart" asp-action="addToCarss" asp-route-id="@Model.Id" erhref="#">Добавить в корзину</a></p>
+    @{
+        foreach (Car item in Model.favCar)
+        {//перебираем все машини
+
+
+            <img class="img-thubnail" src="@item.Img" alt="@item.Name" />
+            <h2>@item.Name</h2>
+            <p>@item.ShortDesc</p>
+            <p>item-></p>
+
+            @item.Price.ToString("c")
+            ;
+            <p><a class="btn btn-warning" asp-controller="ShopCart" asp-action="addToCarss" asp-route-id="@item.Id" erhref="#">Добавить в корзину</a></p>
+        }
+    }
 </div>
